--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -688,7 +688,7 @@ SIDE BAR CSS STARTS
 }
 
 .admin_content {
-  padding: clamp(16px, 2vw, 24px);
+  padding: clamp(16px, 2vw, 21px);
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -1306,6 +1306,7 @@ SIDE BAR CSS ENDS
   border-radius: 8px;
   border: 1px solid var(--whiteEB, #ebebeb);
   padding: 8px 16px;
+  height: 42px;
   outline-color: var(--login-border) !important;
   box-shadow: none;
   background: var(--whiteFA);
@@ -1330,6 +1331,9 @@ SIDE BAR CSS ENDS
 .form_input label span {
   margin-left: 5px;
   color: var(--red);
+}
+.form_input .flatpickr-time{
+  max-height: 60px;
 }
 
 /* Previous button */
