--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -10248,7 +10248,86 @@ select option:not(:first-child) {
   font-size: 14px;
 }
 
+/* deal page css starts  */
+.deal_profile_wrapper .profile_bg {
+  height: 120px;
+  border-radius: 11px;
+  overflow: hidden;
+}
+
+.deal_profile_wrapper .profile_bg img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.deal_profile_wrapper .profile_img {
+  height: 75px;
+  width: 75px;
+  border-radius: 50%;
+  position: absolute;
+  top: -36px;
+  left: 50%;
+  transform: translateX(-50%);
+  overflow: hidden;
+}
+
+.profile_div h3 {
+  padding-top: 50px;
+  text-align: center;
+  font-size: clamp(20px, 2vw, 24px);
+  font-weight: 700;
+  color: var(--text-dark2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+
+.profile_div .location {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  font-size: 16px;
+  font-weight: 600;
+  font-family: var(--lato);
+}
+
+.profile_div .tags_wrapper .private {
+  border-radius: 5px;
+  background: #CECECE;
+  padding: 6px 12px;
+  font-size: 14px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: max-content;
+  gap: 8px;
+}
+
+.profile_div .tags_wrapper .like {
+  border-radius: 5px;
+  background: #4BAE50;
+  color: var(--whiteEB);
+  font-size: 14px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  padding: 6px 12px;
+  width: max-content;
+}
+
+/* deal page css ends */
+
 /* +++++++++++++++++ CRM SECTION CSS ENDS ++++++++++++++++++++++ */
+
+
+
+
 
 /* *********************** PRINT MEDIA CODE ******************** */
 /* vocuhar print css  */
